<resources>
    <string name="app_name">Cashmates</string>
    <string name="spend_amount">Spend Amount</string>
    <string name="add">Add</string>
    <string name="location">Location</string>
    <string name="analysis">Analysis</string>
    <string name="spending_per_month">Spending per month</string>
    <string name="spending_per_sector">Spending per sector</string>
    <string name="spending_distribution">Spending Distribution</string>
    <string name="logout">Logout</string>
    <string name="logout1">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="notes">Notes</string>
    <string name="travel">Travel</string>
    <string name="thousand">1000</string>
    <string name="_00_00_0000">00-00-0000</string>
    <string name="addNote">Add</string>
    <string name="what_do_you_want_to_take_a_note_of">What do you want to take a note of?</string>
    <string name="sector">Sector</string>
    <string name="adding_note">Adding Note</string>
    <string name="all_the_spends">All the spends</string>
</resources>