<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/spendAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="@string/spend_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterAmount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="5000"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/thousand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spendAmount"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/spendOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAmount" />

    <EditText
        android:id="@+id/spendLocation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="5000"
        android:inputType="text"
        android:hint="@string/travel"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spendOn"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spendLocation" />

    <Button
        android:id="@+id/analyze"
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:text="@string/analysis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        app:layout_constraintVertical_bias="0.435" />

    <Button
        android:id="@+id/addNote"
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:text="@string/notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/analyze"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        app:layout_constraintVertical_bias="0.437" />

</androidx.constraintlayout.widget.ConstraintLayout>